--- a/public/stylesheets/button.css
+++ b/public/stylesheets/button.css
@@ -2,7 +2,7 @@
 	display: block;
 	height: 100px;
 	width: 300px;
-	background: #0066CC;
+	background: #002952;
 	border: 2px solid rgba(0,0,0,1);
 	margin-top: 350px;
 	padding-top: 30px;
@@ -11,11 +11,11 @@
 	text-align: center;
 	font: bold 2em/50px "Helvetica Neue", Arial, Helvetica, sans-serif;
 
-	background: -webkit-linear-gradient(top, #0066CC, #003366);
-	background: -moz-linear-gradient(top, #0066CC, #003366);
-	background: -o-linear-gradient(top, #0066CC, #003366);
-	background: -ms-linear-gradient(top, #0066CC, #003366);
-	background: linear-gradient(top, #0066CC, #003366);
+	background: -webkit-linear-gradient(top, #002952, #003366);
+	background: -moz-linear-gradient(top, #002952, #003366);
+	background: -o-linear-gradient(top, #002952, #003366);
+	background: -ms-linear-gradient(top, #002952, #003366);
+	background: linear-gradient(top, #002952, #003366);
 
 	-webkit-border-radius: 50px;
     -khtml-border-radius: 50px;
@@ -35,9 +35,9 @@ a.button{
 
 a.button:hover {
     background: #3d7a80;
-    background: -webkit-linear-gradient(top, #0077CC, #005566);
-    background: -moz-linear-gradient(top, #0077CC, #005566);
-    background: -o-linear-gradient(top, #0077CC, #005566);
-    background: -ms-linear-gradient(top, #0077CC, #005566);
-    background: linear-gradient(top, #0077CC, #005566);
+    background: -webkit-linear-gradient(top, #003152, #005566);
+    background: -moz-linear-gradient(top, #003152, #005566);
+    background: -o-linear-gradient(top, #003152, #005566);
+    background: -ms-linear-gradient(top, #003152, #005566);
+    background: linear-gradient(top, #003152, #005566);
 }
