--- a/res/layout/fragment_navigation_drawer.xml
+++ b/res/layout/fragment_navigation_drawer.xml
@@ -6,4 +6,4 @@
     android:choiceMode="singleChoice"
     android:divider="@android:color/transparent"
     android:dividerHeight="0dp"
-    tools:context="com.example.homeguard.NavigationDrawerFragment" />
+    tools:context="com.bdu.homeguard.NavigationDrawerFragment" />
