Changed the index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,17 +6,17 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
 	<link rel="stylesheet" href="stylesheets/button.css">
 	<style>
-		body 		{ padding-top:80px; }
+		body 		{ padding-top:20px; }
 	</style>
 </head>
 <body>
 <div class="container">
 
-	<div class="jumbotron text-center">
+	<div class="jumbotron text-center" style="background-color: #002952">
 		<img src="images/main_logo_sm.png" height="300">
-		<h1>HomeGuard</h1>
+		<h1 style="color: #FFFFFF">HomeGuard</h1>
 
-		<p>Login or Register with:</p>
+		<p style="color: #FFFFFF">Login or Register with:</p>
 
 		<a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
 		<a href="/takepicture" class="btn btn-primary">Take Picture</a>
