Made some changes at the pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,9 +16,7 @@
 		<img src="images/main_logo_sm.png" height="300">
 		<h1 style="color: #FFFFFF">HomeGuard</h1>
 
-		<p style="color: #FFFFFF">Login or Register with:</p>
-
-		<a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
+		<a href="/login" class="btn btn-default"><span class="fa fa-user"></span>Login</a>
 		<a href="/takepicture" class="btn btn-primary">Take Picture</a>
 
 	</div>
