Changing some stuff in the mailling system

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -53,6 +53,7 @@
               </ul>
             </li>
           </ul>
+          <ul class="nav navbar-nav navbar-right" style="margin-right: -70px"><li><a href="/logout">Logout</a></li></ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
