--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,8 +3,14 @@
 <html>
 <head>
 	<title>HomeGuard - Signup</title>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+	
+	<link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+	
+
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	
 	<style>
 		body 		{ padding-top:80px; }
 	</style>
@@ -25,23 +31,27 @@
 	<form action="/signup" method="post">
 		<div class="form-group">
 			<label>Email</label>
-			<input type="text" class="form-control" name="email">
+			<input type="text" class="form-control" name="email" placeholder="Email" autofocus required>
 		</div>
 		<div class="form-group">
 			<label>First name</label> 
-			<input type="text" class="form-control" name="first_name">
+			<input type="text" class="form-control" name="first_name" placeholder="First name" required>
 		</div>
 		<div class="form-group">
 			<label>Last name</label> 
-			<input type="text" class="form-control" name="last_name">
+			<input type="text" class="form-control" name="last_name" placeholder="Last name" required>
 		</div>
 		<div class="form-group">
 			<label>Sex</label> <br>
-			<input type="radio"  name="sex" value="Female"> Female <input type="radio" name="sex" value="Male"> Male
+			<input type="radio"  name="sex" value="Female" required> Female <input type="radio" name="sex" value="Male" required> Male
+		</div>
+		<div class="form-group">
+			<label>Number of Cameras</label>
+			<input type="text" class="form-control" name="cameras" placeholder="Number of Cameras" required>
 		</div>
 		<div class="form-group">
 			<label>Password</label>
-			<input type="password" class="form-control" name="password">
+			<input type="password" class="form-control" name="password" placeholder="Password" required>
 		</div>
 
 		<button type="submit" class="btn btn-primary btn-lg">Signup</button>
@@ -55,5 +65,6 @@
 </div>
 
 </div>
+
 </body>
 </html>
