--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -38,8 +38,8 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/profile"><%= user.first_name %></a></li>
-            <li><a href="#cameras">Cameras</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="/cameras">Cameras</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
