--- a/views/cameras.ejs
+++ b/views/cameras.ejs
@@ -20,25 +20,6 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script>
-    $(document).ready(function(){
-      setInterval(
-        function(){    
-          if(count==0){
-            $("#streamImg").attr("src","<%=image%>?"+new Date().getTime());
-            count++;  
-          }else if(count == 1){
-            $("#streamImg").attr("src","<%=image2%>?"+new Date().getTime());
-            count++;
-          }else{
-            $("#streamImg").attr("src","<%=image3%>?"+new Date().getTime());
-            count = 0;
-          }
-          
-        }, 1000);
-      
-    });
-    </script>
   </head>
 
   <body>
@@ -63,17 +44,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="/contact">Contact</a></li>
             <li><a href="/streaming">Streaming</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
+            <li><a href="/mjpeg-stream">Mjpeg Streaming</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right" style="margin-right: -70px"><li><a href="/logout">Logout</a></li></ul>
         </div><!--/.nav-collapse -->
