--- a/views/streaming2.ejs
+++ b/views/streaming2.ejs
@@ -67,17 +67,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="/contact">Contact</a></li>
             <li class="active"><a href="/streaming">Streaming</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
+            <li><a href="/mjpeg-stream">Mjpeg Streaming</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right" style="margin-right: -70px"><li><a href="/logout">Logout</a></li></ul>
         </div><!--/.nav-collapse -->
