--- a/views/about.ejs
+++ b/views/about.ejs
@@ -41,9 +41,9 @@
           <ul class="nav navbar-nav">
             <li><a href="/profile"><%= user.first_name %></a></li>
             <li><a href="/cameras">Cameras</a></li>
-            <li><a href="/about">About</a></li>
+            <li class="active"><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
-            <li class="active"><a href="/streaming">Streaming</a></li>
+            <li><a href="/streaming">Streaming</a></li>
             <li><a href="/mjpeg-stream">Mjpeg Streaming</a></li>          </ul>
           <ul class="nav navbar-nav navbar-right" style="margin-right: -70px"><li><a href="/logout">Logout</a></li></ul>
         </div><!--/.nav-collapse -->
@@ -51,7 +51,15 @@
     </div> <!-- fixed navbar -->
    	<div class="container" id="content">
 
+      <h2>Home Guard intends to build a home surveillance system using Raspberry Pi Bluemix and cloud applications.</h2>
 
+  <h3>Developers:</h3>
+
+  Rafael Melo de Oliveira
+  Higor Ernandes
+  Felipe Santos
+  Nelson Antunes
+  Guilherme Borges Oliveira
 
 
 
