--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -38,8 +38,8 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/profile"><%= user.first_name %></a></li>
-            <li><a href="#cameras">Cameras</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="/cameras">Cameras</a></li>
+            <li><a href="/about">About</a></li>
             <li class="active"><a href="/contact">Contact</a></li>
             <li><a href="/streaming">Streaming</a></li>
             <li><a href="/mjpeg-stream">Mjpeg Streaming</a></li>
