--- a/views/cameras.ejs
+++ b/views/cameras.ejs
@@ -41,7 +41,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/profile"><%= user.first_name %></a></li>
             <li class="active"><a href="#cameras">Cameras</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
             <li><a href="/streaming">Streaming</a></li>
             <li><a href="/mjpeg-stream">Mjpeg Streaming</a></li>
