--- a/views/streaming3.ejs
+++ b/views/streaming3.ejs
@@ -43,7 +43,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/profile"></a></li>
             <li><a href="/cameras">Cameras</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
             <li><a href="/streaming">Streaming</a></li>
             <li class="active"><a href="/mjpeg-stream">Mjpeg Streaming</a></li>
