--- a/views/about.ejs
+++ b/views/about.ejs
@@ -54,12 +54,20 @@
       <h2>Home Guard intends to build a home surveillance system using Raspberry Pi Bluemix and cloud applications.</h2>
 
   <h3>Developers:</h3>
-
-  Rafael Melo de Oliveira
-  Higor Ernandes
-  Felipe Santos
-  Nelson Antunes
-  Guilherme Borges Oliveira
+  <h4>
+    <ul>
+      <li>Rafael Melo de Oliveira</li>
+      <li>Higor Ernandes</li>
+      <li>Felipe Santos</li>
+      <li>Nelson Antunes</li>
+      <li>Guilherme Borges Oliveira</li>
+    </ul>
+  </h4>
+  
+  
+  
+  
+  
 
 
 
@@ -69,10 +77,10 @@
 	</div> <!-- content -->
 	</div> <!-- container -->
 </div> <!-- wrap -->
-<div  id = "footer" class="footer">
+<div  id = "footer" class="footer" style="margin-top: 233px">
 	<div class="container">
 		<center>
-			<p class="navbar-text" style="color:#FFFFFF">HomeGuard powered by Big Data University</p>
+			<p class="navbar-text" style="color:#FFFFFF" >HomeGuard powered by Big Data University</p>
 		</center>
 	</div>
 
