Small changes on the login system and streaming

--- a/views/streaming3.ejs
+++ b/views/streaming3.ejs
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>HomeGuard - Profile</title>
+    <title>HomeGuard - Streaming</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.0/jquery.min.js"></script>
 
@@ -41,12 +41,11 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/profile"></a></li>
+            <li><a href="/profile">Profile</a></li>
             <li><a href="/cameras">Cameras</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
-            <li><a href="/streaming">Streaming</a></li>
-            <li class="active"><a href="/mjpeg-stream">Mjpeg Streaming</a></li>
+            <li class="active"><a href="/mjpeg-stream">Streaming</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right" style="margin-right: -70px"><li><a href="/logout">Logout</a></li></ul>
         </div><!--/.nav-collapse -->
@@ -55,11 +54,11 @@
    	<div class="container" id="content" align="center">
       
         <!-- <img id="streamImg" src="" height="480" align="center"><br><br> -->
-        <iframe src="http://neryuuk.ddns.net:8080/stream_simple.html" height="480" width="640"></iframe>
+        <iframe src="http://neryuuk.ddns.net:8080/stream_simple.html" height="610" width="860" scrolling="no" frameBorder="0"></iframe>
 	</div> <!-- content -->
 	</div> <!-- container -->
 </div> <!-- wrap -->
-<div  id = "footer" class="footer" style="margin-top: 700px">
+<div  id = "footer" class="footer" s>
 	<div class="container">
 		<center>
 			<p class="navbar-text" style="color:#FFFFFF">HomeGuard powered by Big Data University</p>
